--- a/RestaurantPOS/Pages/OrdersPage.xaml
+++ b/RestaurantPOS/Pages/OrdersPage.xaml
@@ -9,6 +9,24 @@
              Shell.NavBarIsVisible="False"
              x:DataType="vm:OrdersViewModel">
 
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="th" TargetType="{x:Type Label}">
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="VerticalOptions" Value="Center" />
+            </Style>
+            
+            <Style x:Key="td" TargetType="{x:Type Label}">
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="VerticalOptions" Value="Center" />
+            </Style>
+            
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
+
     <Grid ColumnDefinitions=".75*, .25*">
         <Grid Grid.Column="0"
               RowDefinitions="Auto, Auto, *"
@@ -21,17 +39,218 @@
                    FontAttributes="Bold"/>
             
             <!--Order table-->
-            
+            <Grid Grid.Row="1">
+                <Grid RowDefinitions="30, *">
+                    <Grid Grid.Row="0" 
+                          ColumnDefinitions="*, *, *, *, *, *" 
+                          BackgroundColor="Maroon">
+                        
+                        <Label Grid.Column="0" 
+                               Text="Order Id" 
+                               Style="{StaticResource th}"
+                               Padding="5,0,0,0"/>
+                        
+                        <Label Grid.Column="1" 
+                               Text="Order Date" 
+                               Style="{StaticResource th}"/>
+                        
+                        <Label Grid.Column="2" 
+                               Text="Amount Paid" 
+                               Style="{StaticResource th}"/>
+                        
+                        <Label Grid.Column="3" 
+                               Text="Payment Mode" 
+                               Style="{StaticResource th}"/>
+                        
+                        <Label Grid.Column="4" 
+                               Text="No. of Items" 
+                               Style="{StaticResource th}"/>
+                        
+                        <Label Grid.Column="5" 
+                               Text="" 
+                               Style="{StaticResource th}"/>
+                    </Grid>
+
+                    <CollectionView Grid.Row="1" ItemsSource="{Binding Orders}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="data:Order">
+                                <Grid RowDefinitions="*, auto"
+                                      ColumnDefinitions="*, *, *, *, *, *" 
+                                      HeightRequest="39">
+
+                                    <Label Grid.Row="0" Grid.Column="0" 
+                                           Text="{Binding Id, StringFormat='#{0}'}" 
+                                           Style="{StaticResource td}"
+                                           Padding="5,0,0,0"/>
+
+                                    <Label Grid.Row="0" Grid.Column="1" 
+                                           Text="{Binding OrderDate, StringFormat='{0:dd MM yyyy hh:mm tt}'}" 
+                                           Style="{StaticResource td}"/>
+
+                                    <Label Grid.Row="0" Grid.Column="2" 
+                                           Text="{Binding TotalAmountPaid, StringFormat='{0:C}'}" 
+                                           Style="{StaticResource td}"/>
+
+                                    <Label Grid.Row="0" Grid.Column="3" 
+                                           Text="{Binding PaymentMode}" 
+                                           Style="{StaticResource td}"/>
+
+                                    <Label Grid.Row="0" Grid.Column="4" 
+                                           Text="{Binding TotalItemCount, StringFormat='{0} Item(s)'}" 
+                                           Style="{StaticResource td}"
+                                           TextColor="DarkBlue"
+                                           TextDecorations="Underline"
+                                           ToolTipProperties.Text="View Order Items">
+                                        <Label.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding Source={x:RelativeSource AncestorType={x:Type vm:OrdersViewModel}}, Path=SelectOrderCommand}" 
+                                                                  CommandParameter="{Binding .}"/>
+                                        </Label.GestureRecognizers>
+                                    </Label>
+
+                                    <Button Grid.Row="0" Grid.Column="5" 
+                                            Text="View Items"
+                                            FontSize="13"
+                                            HorizontalOptions="Center"
+                                            VerticalOptions="Center"
+                                            BackgroundColor="DarkOliveGreen"
+                                            CornerRadius="10"
+                                            HeightRequest="30"
+                                            MinimumHeightRequest="30"
+                                            Command="{Binding Source={x:RelativeSource AncestorType={x:Type vm:OrdersViewModel}}, Path=SelectOrderCommand}"
+                                            CommandParameter="{Binding .}"/>
+
+                                    <BoxView Grid.Row="1"
+                                             Grid.ColumnSpan="6"
+                                             Color="LightGray" 
+                                             HeightRequest="1"/>
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                
+                </Grid>
+                
+                
+                <BoxView IsVisible="{Binding IsLoading}"
+                         HorizontalOptions="Fill"
+                         VerticalOptions="Fill"
+                         Color="{StaticResource LightWheat}"/>
+
+                <ActivityIndicator IsRunning="{Binding IsLoading}" 
+                                   HeightRequest="25"
+                                   WidthRequest="25"
+                                   HorizontalOptions="Center"
+                                   VerticalOptions="Center"
+                                   Color="Maroon"/>
+            </Grid>
         </Grid>
 
         <Grid Grid.Column="1" 
               BackgroundColor="{StaticResource LightWheat}"
-              RowDefinitions="auto, auto"
+              RowDefinitions="auto, *"
               Padding="0, 10">
 
-            <Label Grid.Row="0" Text="Selected Order Items"/>
+            <Grid Grid.Row="0" ColumnDefinitions="*, auto">
+                <Label Grid.Row="0" 
+                       Text="Selected Order Item"
+                       FontAttributes="Bold"
+                       FontSize="25"/>
+
+                <ImageButton Grid.Column="1"
+                             Source="x_regular_24.png" 
+                             HorizontalOptions="End"
+                             VerticalOptions="Start"
+                             BackgroundColor="Red"
+                             MinimumHeightRequest="30"
+                             MinimumWidthRequest="30"
+                             CornerRadius="5"
+                             Command="{Binding SelectOrderCommand}">
+                    <ImageButton.Shadow>
+                        <Shadow Brush="Red"/>
+                    </ImageButton.Shadow>
+                </ImageButton>
+            </Grid>
             
             <!--List of select order item-->
+            <ContentView Grid.Row="1"
+                         Padding="10"
+                         BackgroundColor="Wheat">
+                <CollectionView ItemsSource="{Binding OrderItems}">
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout Orientation="Vertical" ItemSpacing="2"/>
+                    </CollectionView.ItemsLayout>
+
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="data:OrderItem">
+                            <Border Padding="5" Background="{StaticResource LightWheat}">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="10"/>
+                                </Border.StrokeShape>
+
+                                <Grid ColumnDefinitions="60, *" ColumnSpacing="10">
+                                    <Border Grid.Column="0"
+                                            HeightRequest="60"
+                                            WidthRequest="60"
+                                            BackgroundColor="LightGray"
+                                            StrokeShape="RoundRectangle 5">
+                                            <Image Source="{Binding Icon}"
+                                                    HeightRequest="60"
+                                                    WidthRequest="60"
+                                                    Aspect="AspectFit"/>
+                                    </Border>
+
+                                    <VerticalStackLayout Grid.Column="1" Spacing="5">
+                                        <Label Text="{Binding Name}"
+                                                FontSize="18"
+                                                FontAttributes="Bold"/>
+
+                                        <Grid ColumnDefinitions="auto, *">
+                                            <HorizontalStackLayout Grid.Column="0" Spacing="3">
+                                                <Label Text="{Binding Quantity, StringFormat='{0} x'}" 
+                                                       FontSize="18"
+                                                       TextColor="Maroon"/>
+                                                
+                                                <Label Text="{Binding Price, StringFormat='{0:C}'}" 
+                                                       FontSize="18"
+                                                       TextColor="Maroon"/>
+                                            </HorizontalStackLayout>
+
+                                            <Label Grid.Column="1"
+                                                   Text="{Binding Amount, StringFormat='{0:C}'}" 
+                                                   HorizontalOptions="End"
+                                                   FontSize="18"
+                                                   FontAttributes="Bold"
+                                                   TextColor="Maroon"/>
+                                        </Grid>
+                                    </VerticalStackLayout>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+
+                    <CollectionView.EmptyView>
+                        <Grid RowDefinitions="*, auto, *" MinimumHeightRequest="250">
+                            <VerticalStackLayout Grid.Row="1" Spacing="10">
+                                <Image Source="cylinder_regular_60.png" 
+                                       HeightRequest="60"
+                                       WidthRequest="60"
+                                       HorizontalOptions="Center"
+                                       />
+                                <Label Text="No Order Selected" 
+                                       FontSize="25"
+                                       FontAttributes="Bold"
+                                       HorizontalOptions="Center"
+                                       TextColor="Maroon"/>
+
+                                <Label Text="Select an order from the left section to view it's items"
+                                       FontSize="18"
+                                       HorizontalOptions="Center"
+                                       HorizontalTextAlignment="Center"/>
+                            </VerticalStackLayout>
+                        </Grid>
+                    </CollectionView.EmptyView>
+                </CollectionView>
+            </ContentView>
         </Grid>
     </Grid>
     
